syntax = "proto3";

package organization.v1;

import "buf/validate/validate.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "v1/common.proto";

option go_package = "github.com/fundament-oss/fundament/organization-api/pkg/proto/gen/v1;organizationv1";

// ProjectService manages projects within an organization
service ProjectService {
  // List all projects for the current organization
  rpc ListProjects(ListProjectsRequest) returns (ListProjectsResponse);

  // Get detailed information about a specific project
  rpc GetProject(GetProjectRequest) returns (GetProjectResponse);

  // Create a new project
  rpc CreateProject(CreateProjectRequest) returns (CreateProjectResponse);

  // Update project configuration
  rpc UpdateProject(UpdateProjectRequest) returns (google.protobuf.Empty);

  // Delete a project
  rpc DeleteProject(DeleteProjectRequest) returns (google.protobuf.Empty);

  // List all namespaces belonging to a project
  rpc ListProjectNamespaces(ListProjectNamespacesRequest) returns (ListProjectNamespacesResponse);

  // List all members of a project
  rpc ListProjectMembers(ListProjectMembersRequest) returns (ListProjectMembersResponse);

  // Add a member to a project (requires admin role)
  rpc AddProjectMember(AddProjectMemberRequest) returns (AddProjectMemberResponse);

  // Update a member's role (requires admin role)
  rpc UpdateProjectMemberRole(UpdateProjectMemberRoleRequest) returns (google.protobuf.Empty);

  // Remove a member from a project (requires admin role)
  rpc RemoveProjectMember(RemoveProjectMemberRequest) returns (google.protobuf.Empty);
}

// List projects request
message ListProjectsRequest {}

// List projects response
message ListProjectsResponse {
  repeated Project projects = 10;
}

// Get project request
message GetProjectRequest {
  string project_id = 10 [(buf.validate.field).string = {uuid: true}];
}

// Get project response
message GetProjectResponse {
  Project project = 10;
}

// Project information
message Project {
  string id = 10;
  string name = 20;
  google.protobuf.Timestamp created_at = 30;
}

// Create project request
message CreateProjectRequest {
  string name = 10 [(buf.validate.field).cel = {
    id: "dns1123label"
    message: "must be a valid DNS-1123 label"
    expression: "this.matches('^[a-z]([-a-z0-9]{0,61}[a-z0-9])?$')"
  }];
}

// Create project response
message CreateProjectResponse {
  string project_id = 10;
}

// Update project request
message UpdateProjectRequest {
  string project_id = 10 [(buf.validate.field).string = {uuid: true}];
  optional string name = 20 [(buf.validate.field).string = {
    min_len: 1
    max_len: 255
  }];
}

// Delete project request
message DeleteProjectRequest {
  string project_id = 10 [(buf.validate.field).string = {uuid: true}];
}

// List project namespaces request
message ListProjectNamespacesRequest {
  string project_id = 10 [(buf.validate.field).string = {uuid: true}];
}

// List project namespaces response
message ListProjectNamespacesResponse {
  repeated ProjectNamespace namespaces = 10;
}

// Project namespace information
message ProjectNamespace {
  string id = 10;
  string name = 20;
  string cluster_id = 30;
  google.protobuf.Timestamp created_at = 40;
}

// Project member role
enum ProjectMemberRole {
  PROJECT_MEMBER_ROLE_UNSPECIFIED = 0;
  PROJECT_MEMBER_ROLE_ADMIN = 1;
  PROJECT_MEMBER_ROLE_VIEWER = 2;
}

// Project member information
message ProjectMember {
  string id = 10;
  string project_id = 20;
  string user_id = 30;
  string user_name = 40;
  ProjectMemberRole role = 50;
  google.protobuf.Timestamp created_at = 60;
}

// List project members request
message ListProjectMembersRequest {
  string project_id = 10 [(buf.validate.field).string = {uuid: true}];
}

// List project members response
message ListProjectMembersResponse {
  repeated ProjectMember members = 10;
}

// Add project member request
message AddProjectMemberRequest {
  string project_id = 10 [(buf.validate.field).string = {uuid: true}];
  string user_id = 20 [(buf.validate.field).string = {uuid: true}];
  ProjectMemberRole role = 30 [(buf.validate.field).enum = {
    not_in: [0]
  }];
}

// Add project member response
message AddProjectMemberResponse {
  string member_id = 10;
}

// Update project member role request
message UpdateProjectMemberRoleRequest {
  string member_id = 10 [(buf.validate.field).string = {uuid: true}];
  ProjectMemberRole role = 20 [(buf.validate.field).enum = {
    not_in: [0]
  }];
}

// Remove project member request
message RemoveProjectMemberRequest {
  string member_id = 10 [(buf.validate.field).string = {uuid: true}];
}
